[package]
name = "json-to-parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
parquet = { version = "22", default-features = false, features = ["snap"] }
serde_json = "1"

[dev-dependencies]
bytes = "1"
parquet = { version = "22", default-features = false, features = ["base64", "json"] }
